hermes_fuzz_executed_few_shot_v2/fuzz_77_execution
'use strict';
<fim_middle>(function () {
    _a.eval('foo("a");')('abc');
})();
 
'use strict';
 
;
"use strict";

 
if (  1 + 1 === 2) {
    let a = Symbol();
    let b = Symbol();
     
    eval("a += 1;");
}
 
let a2 = 42;


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>(function () {
^
